kube/server-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: server
  namespace: default
  labels:
    app: server
spec:
  replicas: 2
  selector:
    matchLabels:
      app: server
  template:
    metadata:
      labels:
        app: server
    spec:
      containers:
        - name: server
          image: gruffdebate/server:$COMMIT_SHA1
          ports:
            - containerPort: 8080
              name: http
