kube/server-loadbalancer.yml
apiVersion: v1
kind: Service
metadata:
  name: server-loadbalancer
spec:
  type: LoadBalancer
  ports:
    - port: 80
      targetPort: 8080
      name: http
    - port: 443
      targetPort: 443
      name: https
  selector:
    app: server
